force-app/main/default/objects/HTTP_Request__mdt/HTTP_Request__mdt.object-meta.xml
<CustomObject>
    <label>HTTP Request</label>
    <pluralLabel>HTTP Requests</pluralLabel>
</CustomObject>