force-app/main/default/objects/HTTP_Request__mdt/fields/Conflux_River__c.field-meta.xml
<CustomField>
    <fullName>Conflux_River__c</fullName>
    <label>Conflux River</label>
    <length>100</length>
    <type>Text</type>
</CustomField>