force-app/main/default/objects/HTTP_Request__mdt/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <length>15</length>
    <type>Text</type>
</CustomField>