force-app/main/default/objects/HTTP_Request__mdt/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <description>Please select a value less than 120,000 milliseconds</description>
    <inlineHelpText>Please select a value less than 120,000 milliseconds</inlineHelpText>
    <label>Timeout (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>