force-app/main/default/objects/HTTP_Request__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>