force-app/main/default/objects/HTTP_Request__mdt/validationRules/VR_HTTP01_Timeout.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_HTTP01_Timeout</fullName>
    <active>true</active>
    <errorConditionFormula>Timeout__c &gt; 120000</errorConditionFormula>
    <errorDisplayField>Timeout__c</errorDisplayField>
    <errorMessage>Please input a value less than 120,000 milliseconds</errorMessage>
</ValidationRule>